--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ node_js:
   - "0.10"
 before_install:
   - npm install -g grunt-cli
-  - npm install -g grunt-contrib-jasmine
+  - npm install grunt
+  - npm install grunt-contrib-jasmine
